Corrected contrast errors

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -31,8 +31,12 @@ footer img{
 }
 
 footer a{
-    color: white;
-    text-shadow: 2px 2px 4px #000000;
+    color: black;
+}
+
+footer a:hover{
+    color: darkblue;
+    background-color: white;
 }
 
 #signature{
@@ -63,8 +67,7 @@ header {
 }
 
 .headings{
-    color: white;
-    text-shadow: 2px 2px 4px #000000;
+    color: black;
 }
 
 .navigation li:first-child {
